--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
      <h1 class="text-center">Dr Norman Borlaug</h1>
      <h2 class="text-center font-italic"><em>The man who saved a billion lives</em></h2>
      <div class="container text-center">
-       <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="men standing in field">
-<div class="inside-text" id="now">
+       <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" class="img-responsive center-block" alt="men standing in field">
+<div class="inside-text center-block" id="now">
   <p style="    padding: 4px;
     background-color: white;
     margin-top: 18px;
